summative.moria.Moria.scala.error
Erreur de compilation :
Moria:1: error: not found: value Direction
setDirection(Direction.Est)
             ^Moria:16: error: not found: value Direction
  setDirection(Direction.Ouest)
               ^Moria:22: error: not found: value Direction
  setDirection(Direction.Est)
               ^