summative.moria.Moria.scala.code
setDirection(Direction.Est)
while(!estFaceMur()){
  	if (!estSurBiscuit())
  		avance()
  	else
  		bougeBiscuit()
}
droite()
avance()
droite()
avance()


def bougeBiscuit(){
  prendBiscuit()
  setDirection(Direction.Ouest)
  avance()
  while(!estSurBiscuit())
  	avance()
  recule()
  poseBiscuit()
  setDirection(Direction.Est)
}